--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -322,15 +322,6 @@ a.sensei-certificate-link {
 					}
 				}
 
-				.submitted_file {
-					margin-bottom: 20px;
-				}
-
-				.submitted_image_file {
-					max-height: 480px;
-					margin-bottom: 20px;
-				}
-
 				.reupload_notice {
 					font-style: italic;
 					margin-bottom: 5px;
